# cloudlog-adifwatch

./: .gitignore  Cargo.toml  Licence  README.md  cloudlog-adifwatch.service
.github/workflows/: audit.yml  clippy.yml  linux-native.yml  linux-riscv.yml  macos-native.yml  rust-audit.yml  rust-check.yml  windows-native.yml
src/: main.rs
