[package]
name = "cloudlog-adifwatch"
version = "0.0.18"
authors = ["Mikael Voss <mvs@nya.yt>"]
edition = "2021"

description = "Automatic upload of ADIF log to Cloudlog"
readme = "README.md"
repository = "https://github.com/illdefined/cloudlog-adifwatch"

license = "MirOS"

keywords = ["amateur-radio", "adif"]
categories = ["command-line-utilities"]

[dependencies]
lazy_static = "1.4"
notify = "5.1"
regex = "1.7"
ureq = { version = "2.6", features = ["json", "native-certs"] }
url = "2.3"

[profile.release]
lto = "thin"
