[package]
name = "cloudlog-adifwatch"
version = "0.0.19"
authors = ["Mikael Voss <mvs@nya.yt>" ]
edition = "2021"

description = "Automatic upload of ADIF log to Cloudlog"
readme = "README.md"
repository = "https://github.com/illdefined/cloudlog-adifwatch"

license = "CC0-1.0"

keywords = ["amateur-radio", "adif"]
categories = ["command-line-utilities"]

[dependencies]
lazy_static = "1.5"
notify = "8.0"
regex = "1.11"
serde_json = "1.0"
ureq = { version = "3.0", features = ["rustls", "platform-verifier", "gzip", "brotli", "json"] }
url = "2.5"

[profile.release]
lto = "thin"
